chore(engine): increase MaxPermSize for unit test with engine plugins
related to #CAM-5713