@@ -675,6 +675,13 @@
               </execution>
             </executions>
           </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>-XX:MaxPermSize=192m -Xmx512m</argLine>
+            </configuration>
+          </plugin>
         </plugins>
       </build>
     </profile>
